# ct-toolkit

./: .gitignore  README.md  Razlaga.cs
build-src-Desktop-Debug/: CMakeCache.txt  CT-TOOLKIT  CT-TOOLKIT.cbp  Makefile  cmake_install.cmake
build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-fd7a86d4e6aa17bfe1a3.json  cmakeFiles-v1-5169f54c471699e7a7b1.json  codemodel-v2-2757ac4cc911fdb12560.json  target-CT-TOOLKIT-Debug-82af17e10bf094b6a5bf.json  target-CT-TOOLKIT_autogen-Debug-c51534f993a2977e50f4.json
build-src-Desktop-Debug/CT-TOOLKIT_autogen/DMHXEJ42XS/: moc_mainwindow.cpp.d
build-src-Desktop-Debug/CT-TOOLKIT_autogen/include/: ui_mainwindow.h
build-src-Desktop-Release/: CMakeCache.txt  CT-TOOLKIT  CT-TOOLKIT.cbp  Makefile  cmake_install.cmake
build-src-Desktop-Release/.cmake/api/v1/reply/: cache-v2-a35b131b21f1c2f9e072.json  cmakeFiles-v1-38ad94fe793b8c99b091.json  codemodel-v2-96a07d528a9126565c92.json  index-2021-04-13T10-44-55-0526.json  target-CT-TOOLKIT-Release-2012e20f6403a1eff59c.json  target-CT-TOOLKIT_autogen-Release-44f307f360010aa798ea.json
build-src-Desktop-Release/CT-TOOLKIT_autogen/: moc_predefs.h
build-src-Desktop-Release/CT-TOOLKIT_autogen/DMHXEJ42XS/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-src-Desktop-Release/CT-TOOLKIT_autogen/include/: ui_mainwindow.h
src/: CMakeLists.txt  binarytools.cpp  binarytools.hpp  main.cpp  quadtree.cpp  quadtree.hpp
src/app/: binarytools.cpp  binarytools.hpp  bmp.cpp  bmp.hpp  imgtools.cpp  imgtools.hpp  quadtree.cpp  quadtree.hpp
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
